[package]
name = "broadcast-dra"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
statrs = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
curve25519-dalek = { version = "4", features = ["alloc"] }
blake3 = "1.5"
bulletproofs = { version = "5", features = ["rand"] }
merlin = "3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "commitment_bench"
harness = false
